--- a/readme
+++ b/readme
@@ -1,3 +1,4 @@
-本小项目的目的是，实现NSString* str = @"((8×12÷3-99-3)+(8×(1-30-29)+3))+(8×3÷3-9+3)"-> NSString* result = @""
+本小项目的目的是，实现NSString* str = @"((8×12÷3-99-3)+(8×(1-30-29)+3))+(8×3÷3-9+3)"-> NSString* result = @"-529"
+
 
 
