--- a/readme
+++ b/readme
@@ -1,6 +1,8 @@
 本小项目的目的是，实现任意数字任意符号组成合理的
 类似NSString* str = @"((8×12÷3-99-3)+(8×(1-30-29)+3))+(8×3÷3-9+3)" -> NSString* result = @"-529"字符串式子
 并由它数学上基本的正确计算结果，最后返回NSString类型的结果。
+
+下面是这个小项目的主业务逻辑的 主流程图 链接：
 ![image](https://github.com/HeYang123456789/Objective-C/blob/master/%E5%8E%9F%E5%BC%8F%E5%AD%90.png)
 
 
