--- a/readme
+++ b/readme
@@ -3,7 +3,7 @@
 并由它数学上基本的正确计算结果，最后返回NSString类型的结果。
 
 下面是这个小项目的主业务逻辑的 主流程图 链接：
-![image](https://github.com/HeYang123456789/Objective-C/blob/master/%E5%8E%9F%E5%BC%8F%E5%AD%90.png)
+![image.png](https://github.com/HeYang123456789/Objective-C/blob/master/%E5%8E%9F%E5%BC%8F%E5%AD%90.png)
 
 ![demo.gif](http://images0.cnblogs.com/blog2015/607542/201507/260857001701868.gif)
 
