--- a/readme
+++ b/readme
@@ -3,6 +3,6 @@
 并由它数学上基本的正确计算结果，最后返回NSString类型的结果。
 
 下面是这个小项目的主业务逻辑的 主流程图 链接：
- ![image.png](one.png)
+![baidu](http://www.baidu.com/img/bdlogo.gif "百度logo")
 
 
